feat(transactions): Add transaction management
Support editing and confirmed deletion with a date-grouped ledger,
compact row actions, and a focused in-page Add/Edit form.

Persist corrections safely and enforce the transaction amount boundary.

Refs: #9